--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,10 @@
   "name": "Atalaia Guest App",
   "short_name": "Atalaia",
   "description": "Info App for guests staying at Atalaia Terrace in Donostia.",
-  "start_url": "/index.html",
+  "start_url": "https://github.com/Goetarri/app-atalaia",
+  "scope": "https://github.com/Goetarri/app-atalaia",
   "display": "standalone",
+  "orientation": "portrait-primary",
   "background_color": "#f4f4f9",
   "theme_color": "#2c3e50",
   "icons": [
