--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
   "name": "Atalaia Guest App",
   "short_name": "Atalaia",
   "description": "Info App for guests staying at Atalaia Terrace in Donostia.",
-  "start_url": "https://goetarri.github.io/app-atalaia",
-  "scope": "https://goetarri.github.io/app-atalaia",
+  "start_url": "https://goetarri.github.io/app-atalaia/",
+  "scope": "https://goetarri.github.io/app-atalaia/",
   "display": "standalone",
   "orientation": "portrait-primary",
   "background_color": "#f4f4f9",
