--- a/manifest.json
+++ b/manifest.json
@@ -2,10 +2,10 @@
   "name": "Atalaia Guest App",
   "short_name": "AtalaiaApp",
   "description": "Info App for guests staying at Atalaia Terrace in Donostia.",
-  "start_url": "https://goetarri.github.io/app-atalaia/",
-  "scope": "https://goetarri.github.io/app-atalaia/",
+  "start_url": "https://goetarri.github.io/app-atalaia",
+  //"scope": "https://goetarri.github.io/app-atalaia",
   "display": "standalone",
-  "orientation": "portrait-primary",
+  //"orientation": "portrait-primary",
   "background_color": "#f4f4f9",
   "theme_color": "#2c3e50",
   "icons": [
