--- a/manifest.json
+++ b/manifest.json
@@ -2,20 +2,20 @@
   "name": "Atalaia Guest App",
   "short_name": "AtalaiaApp",
   "description": "Info App for guests staying at Atalaia Terrace in Donostia.",
-  "start_url": "https://goetarri.github.io/app-atalaia",
-  //"scope": "https://goetarri.github.io/app-atalaia",
+  "start_url": "./",
+  "scope": "./",
   "display": "standalone",
   //"orientation": "portrait-primary",
   "background_color": "#f4f4f9",
   "theme_color": "#2c3e50",
   "icons": [
     {
-      "src": "/images/icon-192x192.png",
+      "src": "images/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/images/icon-512x512.png",
+      "src": "images/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
